Added form and options for it

--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
     <title>Products</title>
 </head>
 <body>
-    
+    <h1>Add Video Game</h1>
+
+    <div id = "validationSummary">
+        <p>Errors go here!</p>
+    </div>
+
+    <form action="">
+        <label for="gameTitle">Title:</label>
+        <input type="text" id="gameTitle">
+        <br>
+
+        <label for="gamePrice">Price:</label>
+        <input type="gamePrice" id="price">
+        <br>
+
+        <label for="gameRating">Rating:</label>
+        <select id="gameRating">
+            <option>Choose 1 please!</option>
+            <option>E</option>
+            <option>T</option>
+            <option>M</option>
+        </select>
+
+        <br>
+        <label for="onlineOnly">Online only?</label>
+        <input type="checkbox" id="onlineOnly">
+        <br>
+
+        <input type="button" value="Add New Game">
+        <br>
+    </form>
 </body>
 </html>
