Started the css styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
+    <link rel="stylesheet" href="/css/site.css">
 </head>
 <body>
     <h1>Add Video Game</h1>
@@ -19,7 +20,7 @@
         <br>
 
         <label for="gamePrice">Price:</label>
-        <input type="gamePrice" id="price">
+        <input type="text" id="gamePrice">
         <br>
 
         <label for="gameRating">Rating:</label>
