--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
     <link rel="stylesheet" href="/css/site.css">
+    
 </head>
 <body>
     <h1>Add Video Game</h1>
@@ -39,5 +40,7 @@
         <input type="button" value="Add New Game">
         <br>
     </form>
+
+    <script src="/js/main.js"></script>
 </body>
 </html>
