--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         <br>
     </form>
 
+    <br><br>
+    <div id="display">
+        
+    </div>
+
     <script src="/js/main.js"></script>
 </body>
 </html>
