Added UL for errors. Made getInputElem.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
     <h1>Add Video Game</h1>
 
-    <div id = "validationSummary">
-        <p>Errors go here!</p>
+    <div>
+        <ul id = "validationSummary">
+            
+        </ul>
     </div>
 
     <form action="">
