Altered select slightly. Finished validation.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div>
         <ul id = "validationSummary">
-            
+
         </ul>
     </div>
 
@@ -28,8 +28,8 @@
 
         <label for="gameRating">Rating:</label>
         <select id="gameRating">
-            <option>Choose 1 please!</option>
-            <option>E</option>
+            <option value="">Choose 1 please!</option>
+            <option value="E">E</option>
             <option>T</option>
             <option>M</option>
         </select>
